2002-01-17  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Fixed some silliness, thanks to Charles Schmidt.

2002-01-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): New utility function
	to iconv n bytes of a string and return a buffer containing the
	converted string.
	(g_mime_iconv_strdup): Same but for the whole string.
	(g_mime_iconv_locale_to_utf8): Converts a string in the locale
	charset to utf8.
	(g_mime_iconv_locale_to_utf8_length): Same but for a sublength of
	the string.
	(g_mime_iconv_utf8_to_locale): Converts a string from utf8 to the
	locale charset.
	(g_mime_iconv_utf8_to_locale_length): Same but for a sublength of
	the string.

2002-01-15  Jeffrey Stedfast  <fejj@ximian.com>

	* test-iconv.c: test suite to make sure that the gmime-iconv cache
	works.

	* gmime-iconv.c (g_mime_iconv_init): Initialize the iconv_node
	memchunk.
	(g_mime_iconv_shutdown): Destroy the iconv_node memchunk.
	(iconv_node_destroy): Use memchunk_free instead of g_free.
	(iconv_node_new): Use memchunk_alloc.
	(iconv_node_set_used): Add/Remove the node to the iconv_open_hash.

2002-01-14  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 0.7.7

	* doc/*: Updated to document the new gmime-iconv interfaces.

	* gmime-filter-charset.c (g_mime_filter_charset_new): Use
	g_mime_iconv_open instead of iconv_open. Also no longer need to
	use g_mime_charset_name() since gmime-iconv does this for us.
	(filter_destroy): Use g_mime_iconv_close() instead of
	iconv_close().

	* gmime-iconv.c (g_mime_iconv_open): New wrapper around
	iconv_open() so that we can cache the results. This'll be a major
	speedup for systems like Solaris where iconv_open() must dlopen a
	module for each of the charsets. Also uses g_mime_charset_name()
	to get the iconv-friendly charset name for you.
	(g_mime_iconv_close): New wrapper around iconv_close().

2002-01-13  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 0.7.6
